Bug 789014 - v5: remove GetDeviceName and no device name in system message