dom/bluetooth/linux/BluetoothDBusService.cpp
@@ -301,8 +301,6 @@ KeepDBusPairingMessage(const nsString& aDeviceAddress, DBusMessage* aMsg)
   dbus_message_ref(aMsg);
 }
 
-bool GetDeviceName(const char* aPath, nsString& aName);
-
 static DBusHandlerResult
 AgentEventFilter(DBusConnection *conn, DBusMessage *msg, void *data)
 {
@@ -356,7 +354,7 @@ AgentEventFilter(DBusConnection *conn, DBusMessage *msg, void *data)
       parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("uuid"),
                                                    NS_ConvertUTF8toUTF16(uuid)));
 
-      // Because we may have authorization request and pairing request from the 
+      // Because we may have authorization request and pairing request from the
       // same remote device at the same time, we need two tables to keep these messages.
       sAuthorizeReqTable.Put(deviceAddress, msg);
 
@@ -380,13 +378,9 @@ AgentEventFilter(DBusConnection *conn, DBusMessage *msg, void *data)
       errorStr.AssignLiteral("Invalid arguments for RequestConfirmation() method");
     } else {
       nsString deviceAddress = GetAddressFromObjectPath(NS_ConvertUTF8toUTF16(objectPath));
-      nsString name;
-      GetDeviceName(objectPath, name);
-
       parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("deviceAddress"), deviceAddress));
-      parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("name"), name));
       parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("passkey"), passkey));
-      
+
       KeepDBusPairingMessage(deviceAddress, msg);
 
       v = parameters;
@@ -403,11 +397,7 @@ AgentEventFilter(DBusConnection *conn, DBusMessage *msg, void *data)
       errorStr.AssignLiteral("Invalid arguments for RequestPinCode() method");
     } else {
       nsString deviceAddress = GetAddressFromObjectPath(NS_ConvertUTF8toUTF16(objectPath));
-      nsString name;
-      GetDeviceName(objectPath, name);
-
       parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("deviceAddress"), deviceAddress));
-      parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("name"), name));
 
       KeepDBusPairingMessage(deviceAddress, msg);
 
@@ -424,11 +414,7 @@ AgentEventFilter(DBusConnection *conn, DBusMessage *msg, void *data)
       errorStr.AssignLiteral("Invalid arguments for RequestPasskey() method");
     } else {
       nsString deviceAddress = GetAddressFromObjectPath(NS_ConvertUTF8toUTF16(objectPath));
-      nsString name;
-      GetDeviceName(objectPath, name);
-
       parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("deviceAddress"), deviceAddress));
-      parameters.AppendElement(BluetoothNamedValue(NS_LITERAL_STRING("name"), name));
 
       KeepDBusPairingMessage(deviceAddress, msg);
 
@@ -845,51 +831,6 @@ ParsePropertyChange(DBusMessage* aMsg, BluetoothValue& aValue,
     return;
   }
   aValue = props;
-}
-
-bool
-GetDeviceName(const char* aPath,
-              nsString& aName)
-{
-  BluetoothValue v = InfallibleTArray<BluetoothNamedValue>();
-  nsString replyError;
-
-  DBusError err;
-  dbus_error_init(&err);
-
-  DBusMessage* msg = dbus_func_args_timeout(gThreadConnection->GetConnection(),
-                                            1000,
-                                            &err,
-                                            aPath,
-                                            DBUS_DEVICE_IFACE,
-                                            "GetProperties",
-                                            DBUS_TYPE_INVALID);
-  UnpackDevicePropertiesMessage(msg, &err, v, replyError);
-
-  if (!replyError.IsEmpty()) {
-    LOG("%s: Could not get device properties", __FUNCTION__);
-    return false;
-  }
-  if (msg) {
-    dbus_message_unref(msg);
-  }
-
-  uint32_t p;
-  for (p = 0; p < v.get_ArrayOfBluetoothNamedValue().Length(); ++p) {
-    BluetoothNamedValue& property = v.get_ArrayOfBluetoothNamedValue()[p];
-    if (property.name().EqualsLiteral("Name")) {
-      aName = property.value().get_nsString();
-      LOG("DBus, Name = %s", NS_ConvertUTF16toUTF8(aName).get());
-      break;
-    }
-  }
-
-  if (p == v.get_ArrayOfBluetoothNamedValue().Length()) {
-    LOG("%s: Could not get property 'name'", __FUNCTION__);
-    return false;
-  }
-
-  return true;
 }
 
 // Called by dbus during WaitForAndDispatchEventNative()
